# cloudflare-ddns-synology-python

./: .gitignore  LICENSE  Makefile  README.md  add_synology_ddns_provider.sh  binary-install.sh  cloudflare_ddns.py.spec  install.sh  pyproject.toml  wget-install.sh
.github/: copilot-instructions.md
.github/workflows/: release.yml  test.yml
cloudflare_ddns_synology/: __init__.py  cli.py
tests/: test_cli.py
