[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloudflare-ddns-synology"
version = "0.1.0"
description = "Custom DDNS provider for Synology using Cloudflare DDNS."
authors = [
  { name="Lindley White", email="this@lindley.dev" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "cloudflare-ddns"
]

[project.scripts]
synology-cloudflare-ddns = "cloudflare_ddns_synology.cli:main"
